samples/_failures_safe/1761180976_977246_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5c18c71a.c: In function ‘main’:
./samples/SAFE/__tmp_5c18c71a.c:151:56: error: expected ‘)’ at end of input
  151 |     struct Matrix result = matrix_multiply(&mat1, &mat2
      |                                           ~            ^
      |                                                        )
./samples/SAFE/__tmp_5c18c71a.c:151:12: error: expected declaration or statement at end of input
  151 |     struct Matrix result = matrix_multiply(&mat1, &mat2
      |            ^~~~~~
